--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
   <main class="pb-5 container">
-    <div clas="cat-list-container" id="cat-list-container">
+    <div clas="cat-list-container" id="cat-list-products">
 
     </div>
     
