--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
         </label>
       </div>
       <a class="w-100 btn btn-lg  btn-primary" type="submit" onclick="comprobarValores()" role="button">Iniciar Sesión</a>
-      <div class="g-signin2" data-onsuccess="onSignIn"></div>      
+      <div class="g-signin2" data-onsuccess="onSignIn" onclick="onSignIn()"></div>      
      
     </form>
     
