--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
       </div>
       <a class="w-100 btn btn-lg  btn-primary" type="submit" onclick="comprobarValores()" role="button">Iniciar Sesión</a>
     </form>
-      <div class="g-signin2" data-onsuccess="onSignIn" onclick="onSignIn()"></div>      
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>      
     
   </main>
   
@@ -83,6 +83,22 @@
     <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
   </div>
 </footer>
+      <script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+      }
+    </script
 <script src="js/login.js"></script>
 <!--script de google-->
 <script src="https://apis.google.com/js/platform.js" async defer></script>
