--- a/login.html
+++ b/login.html
@@ -67,9 +67,14 @@
         </label>
       </div>
       <a class="w-100 btn btn-lg  btn-primary" type="submit" onclick="comprobarValores()" role="button">Iniciar Sesión</a>
-    </form>
-      <div class="g-signin2" data-onsuccess="onSignIn"></div>      
     
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div id="g_id_onload"
+         data-client_id="YOUR_CLIENT_ID"
+         data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard"></div>
+    </form>
   </main>
   
 </body>
@@ -101,6 +106,7 @@
     </script
 <script src="js/login.js"></script>
 <!--script de google-->
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
