--- a/login.html
+++ b/login.html
@@ -100,7 +100,7 @@
         console.log("Email: " + profile.getEmail());
 
         // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().id_token;
+        var id_token = googleUser.getAuthResponse().594088268717-r5jh7p81ufh2dtdojt8744o48t5n23av.apps.googleusercontent.com;
         console.log("ID Token: " + id_token);
       }
     </script
