--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
     
       <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <div id="g_id_onload"
-         data-client_id="YOUR_CLIENT_ID"
+         data-client_id=".594088268717-r5jh7p81ufh2dtdojt8744o48t5n23av.apps.googleusercontent.com"
          data-callback="handleCredentialResponse">
     </div>
     <div class="g_id_signin" data-type="standard"></div>
@@ -100,7 +100,7 @@
         console.log("Email: " + profile.getEmail());
 
         // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().594088268717-r5jh7p81ufh2dtdojt8744o48t5n23av.apps.googleusercontent.com;
+        var id_token = googleUser.getAuthResponse().id_token;
         console.log("ID Token: " + id_token);
       }
     </script
