--- a/login.html
+++ b/login.html
@@ -69,11 +69,8 @@
       <a class="w-100 btn btn-lg  btn-primary" type="submit" onclick="comprobarValores()" role="button">Iniciar Sesión</a>
     
       <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <div id="g_id_onload"
-         data-client_id=".594088268717-r5jh7p81ufh2dtdojt8744o48t5n23av.apps.googleusercontent.com"
-         data-callback="handleCredentialResponse">
-    </div>
-    <div class="g_id_signin" data-type="standard"></div>
+       <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
+
     </form>
   </main>
   
@@ -88,23 +85,9 @@
     <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
   </div>
 </footer>
-      <script>
-      function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());
-
-        // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().id_token;
-        console.log("ID Token: " + id_token);
-      }
-    </script
-<script src="js/login.js"></script>
+  
+  
+<script src="js/login.js" async defer></script>
 <!--script de google-->
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
