--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
       </div>
       <a class="w-100 btn btn-lg  btn-primary" type="submit" onclick="comprobarValores()" role="button">Iniciar Sesión</a>
     
-      <div class="g-signin2" data-onsuccess="onSignIn" onclick="init()"></div>
+      <div class="my-signin2"></div>
        <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
 
     </form>
@@ -85,6 +85,26 @@
   </div>
 </footer>
   
+  <script>
+    function onSuccess(googleUser){
+      console.log(goolgeUser);
+    }
+    function onFailure(error){
+        console.log(error);
+    }
+   function renderButton(){
+      gapi.signin.render("my-signin2", {
+        'scope': 'profile email',
+        'width': 250,
+        'height': 50,
+        'longtitle': true,
+        'theme': 'dark',
+        'onsucces': onSuccess,
+        'onfailure': onFailure
+      })
+   }
+  
+  </script>
   
 <script src="js/login.js" async defer></script>
 <!--script de google-->
