--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
       </div>
       <a class="w-100 btn btn-lg  btn-primary" type="submit" onclick="comprobarValores()" role="button">Iniciar Sesión</a>
     
-      <div class="my-signin2"></div>
+      <div id="my-signin2"></div>
        <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
 
     </form>
