--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!--Google Id-->
+  <meta name="google-signin-client_id" content="594088268717-r5jh7p81ufh2dtdojt8744o48t5n23av.apps.googleusercontent.com">
+
 </head>
 
 <body onload="cargarInicio()">
@@ -29,6 +34,8 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
+          <img src="" alt="profile" class="img">
+
           <li class="nav-item" id="usuario">
           </li>
           <div id="inicio">
@@ -94,6 +101,12 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
+  <!--script de google-->
+
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 
 </html>
