--- a/categories.html
+++ b/categories.html
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="list-group" id="cat-list-container">
+        <div class="row row-cols-1 row-cols-md-3 g-4" id="products-list-container">
         </div>
       </div>
     </div>
