--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
   <main class="pb-5 container">
-    <div clas="cat-list-container" id="cat-list-products">
+    <div class="row row-cols-1 row-cols-md-3 g-4" id="products-list-container">
 
     </div>
     
