--- a/categories.html
+++ b/categories.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
   <main class="pb-5">
-    <div class="text-center p-4">
+    <div class="text-center p-4 categ">
       <h2>Categorías</h2>
       <p class="lead">Verás aquí todas las categorías del sitio.</p>
     </div>
