--- a/products.html
+++ b/products.html
@@ -37,11 +37,19 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
-    <div class="row row-cols-1 row-cols-md-3 g-4" id="products-list-container">
+<main >
+  
 
-    </div>
+  <!--Se escribe el titulo de la categoria-->
+   <div class="text-center p-4 prod" id="prod">
     
+   </div>
+   <br>
+<!--Se escribe los productos-->
+   <div class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4" id="products-list-container">
+    </div>
+  </div>   
   </main>
   <footer class="text-muted">
     <div class="container">
@@ -64,13 +72,9 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/products.js"></script>
-  
-  <script src="js/index.js"></script>
-    <!--Google-->
-   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
+
 </body>
 
-</html> 
+</html>
