--- a/products.html
+++ b/products.html
@@ -30,9 +30,14 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item" id="usuario">
-          </li>
-          <div id="inicio">
+          <div class="btn-group">
+            <li type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
+            </li>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><hr class="dropdown-divider"></li>
+              <li id="inicio"></li>                  
+            </ul>
+          </div>
         </ul>
       </div>
     </div>
