--- a/categories.html
+++ b/categories.html
@@ -30,9 +30,15 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item" id="usuario">
-          </li>
-          <div id="inicio">
+          <div class="btn-group">
+            <li type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
+            </li>
+            <li lass="nav-item"></li>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><hr class="dropdown-divider"></li>
+              <li id="inicio"></li>                  
+            </ul>
+          </div>
         </ul>
       </div>
     </div>
@@ -105,11 +111,7 @@
   <script src="js/categories.js"></script>
 
   <script src="js/index.js"></script>
-</body>
-  <!--Google-->
-   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+</body>
 
 </html>
