--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!--Google Id-->
-  <meta name="google-signin-client_id" content="594088268717-r5jh7p81ufh2dtdojt8744o48t5n23av.apps.googleusercontent.com">
 
 </head>
 
@@ -33,12 +30,15 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item" id="usuario">
-          </li>
-          <div id="inicio">
-          
-          </div>
+          </li> 
+                <div class="btn-group">
+                  <li type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
+                  </li>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                    <li><hr class="dropdown-divider"></li>
+                    <li id="inicio"></li>                  
+                  </ul>
+                </div>
         </ul>
       </div>
     </div>
@@ -99,12 +99,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
-  <!--script de google-->
-
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+ 
 </body>
 
 </html>
