--- a/sell.html
+++ b/sell.html
@@ -11,7 +11,7 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="cargarInicio()"">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -31,6 +31,14 @@
           </li>
           <li class="nav-item">
           </li>
+          <div class="btn-group">
+            <li type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="usuario"></li>
+            <li lass="nav-item"></li>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><hr class="dropdown-divider"></li>
+              <li id="inicio"></li>                  
+            </ul>
+          </div>
         </ul>
       </div>
     </div>
@@ -227,6 +235,8 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/sell.js"></script>
+  <script src="js/index.js"></script>
+
 </body>
 
 </html>
