--- a/product-info.html
+++ b/product-info.html
@@ -34,7 +34,7 @@
           <li class="nav-item">
           </li>
           <div class="btn-group">
-            <li type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
+            <li type="button" class="btn btn-outline-info" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
             </li>
             <li lass="nav-item"></li>
             <ul class="dropdown-menu dropdown-menu-end">
