--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <div class="btn-group">
-            <li type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
+            <li type="button" class="btn btn-outline-info" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
             </li>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><hr class="dropdown-divider"></li>
