--- a/categories.html
+++ b/categories.html
@@ -13,7 +13,7 @@
 </head>
 
 <body onload="cargarInicio()">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
+  <nav class="navbar navbar-expand-lg navbar-dark  p-1" style="background-color:#000">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,29 +21,43 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
+          <div> 
+            <a class="" href="index.html">
+            <img src="img/logo-dark.png" style="height: 40px">
+            </a>
+          </div>
           <li class="nav-item">
             <a class="nav-link active" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <div class="btn-group">
-            <li type="button" class="btn btn-outline-info" data-bs-toggle="dropdown" aria-expanded="false" id="usuario">
-            </li>
-            <li lass="nav-item"></li>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><hr class="dropdown-divider"></li>
-              <li id="inicio"></li>                  
-            </ul>
-          </div>
+          <li class="nav-item" style="margin-left: 20rem;">
+            <div class="col row" role="search">
+              <div class="col-md-10 form-outline">
+                <input class="form-control me-2 col" type="" id="searches" onkeyup="busca()" placeholder="Buscar" aria-label="Search">
+              </div> 
+                <span class="col row " id="search-addon">
+                <button class="btn col row" id="search" style="align-items: center;" type="submit"> <i class="fas fa-search"></i></button> 
+          </li>
+            <div class="btn-group">
+              <li type="button" data-bs-toggle="dropdown" aria-expanded="false" >
+                <svg xmlns="http://www.w3.org/2000/svg" style="color: white" width="35" height="35" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                </svg>
+              </li>
+                <ul class="dropdown-menu dropdown-menu-end" style="width: 250px;">
+                    <div class="alert-success"><li style="margin-left: 1em;" id="usuario"></li> </div>
+                    <li><hr class="dropdown-divider"></li>
+                    <li id="inicio"></li>
+                </ul>  
+            </div>                    
         </ul>
       </div>
     </div>
   </nav>
-  <main class="pb-5">
+  <main class="pb-5" id="main">
     <div class="text-center p-4 categ">
       <h2>Categorías</h2>
       <p class="lead">Verás aquí todas las categorías del sitio.</p>
@@ -88,6 +102,7 @@
       </div>
     </div>
   </main>
+  <div id="busqueda"></div>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
@@ -111,6 +126,7 @@
   <script src="js/categories.js"></script>
 
   <script src="js/index.js"></script>
+  <script src="js/search.js"></script>
 
 </body>
 
