--- a/product-info.html
+++ b/product-info.html
@@ -101,13 +101,11 @@
           <div class="row">
             <div class="col-xs-12">
              
-              <h3 class="my-3">Comentarios<h3>
-              <hr class="my-4">
-              
+              <h4 class="my-3">Comentarios</h4>              
                 <div class="my-5">
                   <div class="border rounded-3 cont">
-                    <ul class="list-group" id="contenedor">
-                    </ul>
+                    <div class="list-group" id="contenedor">
+                    </div>
                   </div>
                   <div class="col-xs-20">
 
@@ -116,7 +114,22 @@
                         <label for="Item" class="form-label"><h4>comentar:</h4></label>
                         <input type="text" class="form-control" id="item">
                         <div class="d-grid">
-                          <button type="button" class="btn btn-primary col-3" id="agregar">Agregar</button>
+                          <form id="calif">
+                            <p class="clasificacion">
+                                <input id="radio1" type="radio" name="estrellas" onclick="cantEstrellas(5)" value="5"><!--
+                              --><label for="radio1">★</label><!--
+                              --><input id="radio2" type="radio" name="estrellas"  onclick="cantEstrellas(4)" value="4"><!--
+                              --><label for="radio2">★</label><!--
+                              --><input id="radio3" type="radio" name="estrellas"  onclick="cantEstrellas(3)" value="3"><!--
+                              --><label for="radio3">★</label><!--
+                              --><input id="radio4" type="radio" name="estrellas"  onclick="cantEstrellas(2)" value="2"><!--
+                              --><label for="radio4">★</label><!--
+                              --><input id="radio5" type="radio" name="estrellas"  onclick="cantEstrellas(1)" value="1"><!--
+                              --><label for="radio5">★</label>
+                            </p>
+\                          </form>
+                          <button type="button" class="btn btn-primary col-3" id="agregar">Agregar
+                          </button>
                         </div>
                       </div>
                   </div>
