--- a/product-info.html
+++ b/product-info.html
@@ -98,11 +98,11 @@
           </div>
           <br>
             <hr class="my-1">
-          <div class="row">
-            <div class="col-xs-12">
-             
-              <h4 class="my-3">Comentarios</h4>              
-                <div class="my-5">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-10 ">
+             <br>
+              <h4 class="">Comentarios:</h4>              
+                <div class="">
                   <div class="border rounded-3 cont">
                     <div class="list-group" id="contenedor">
                     </div>
@@ -110,12 +110,15 @@
                   <div class="col-xs-20">
 
                     <div class="row my-4">
-                      <div class="col">
-                        <label for="Item" class="form-label"><h4>comentar:</h4></label>
-                        <input type="text" class="form-control" id="item">
-                        <div class="d-grid">
-                          <form id="calif">
+                      <div class="container">
+                        <label for="Item" class="form-label"><h4>Comentar</h4></label>
+                        <input type="text" class="form-control"  style="height:70px" id="item">
+                        <br>
+                        <div class="d-grid raw">
+                          <div class="col">
+                          <h3><form id="calif">
                             <p class="clasificacion">
+                              <a href="" id="agregar" style="background-color:black; color:white; margin-left: 2rem;" class="btn"><b>Publicar</b></a>
                                 <input id="radio1" type="radio" name="estrellas" onclick="cantEstrellas(5)" value="5"><!--
                               --><label for="radio1">★</label><!--
                               --><input id="radio2" type="radio" name="estrellas"  onclick="cantEstrellas(4)" value="4"><!--
@@ -127,9 +130,11 @@
                               --><input id="radio5" type="radio" name="estrellas"  onclick="cantEstrellas(1)" value="1"><!--
                               --><label for="radio5">★</label>
                             </p>
-\                          </form>
-                          <button type="button" class="btn btn-primary col-3" id="agregar">Agregar
-                          </button>
+                            </form>
+                          </h3>
+                          </div>
+                          <div class="col order-5">
+                          </div>
                         </div>
                       </div>
                   </div>
