--- a/login.html
+++ b/login.html
@@ -54,7 +54,12 @@
     <form name="ingreso">
       <img class="mb-4" src="img/login.png" alt="" width="300" >
       <h1 class="h3 mb-3 fw-normal">Inicio de sesión</h1>
-  
+      
+      <div class="alert alert-danger alert-dismissible fade " role="alert" id="alert">
+        <div id="mensaje">Complete los campos vacios</div>
+        <button id="close" type="button" class="btn-close" aria-label="Close"></button>
+      </div>
+
       <div class="form-floating">
         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Correo electrónico</label>
