--- a/index.html
+++ b/index.html
@@ -33,26 +33,36 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
+            <a class="zoom nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
+            <a class="zoom nav-link" href="sell.html">Vender</a>
           </li> 
+          <li  style="width:300px;"></li>
 
-          <li class="nav-item" style="margin-left: 20rem;">
+          <li class="nav-item">
             <div class="col row" role="search">
               <div class="col-md-10 form-outline">
-                <input class="form-control me-2 col" type="" id="searches" onkeyup="busca()" placeholder="Buscar" aria-label="Search">
+                <input class="zoom form-control me-2 col" type="" id="searches" onkeyup="busca()" placeholder="Buscar" aria-label="Search">
               </div> 
                 <span class="col row " id="search-addon">
               
-                <button class="btn col row" id="search" style="align-items: center;" type="submit"> <i class="fas fa-search"></i>
+                <button class="zoom btn col row" id="search" style="align-items: center;" type="submit"> <i class="fas fa-search"></i>
                 </button-->
               </div>
+              <li  style="width:50px;"></li>
+              <li class="nav-item">
+                <a class="zoom nav-link" href="cart.html">
+                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                  </svg>
+                </a>
+              </li>
+           
             </li>
                 <div class="btn-group">
-                  <li type="button" data-bs-toggle="dropdown" aria-expanded="false" >
-                    <svg xmlns="http://www.w3.org/2000/svg" style="color: white" width="35" height="35" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <li class="zoom" type="button" data-bs-toggle="dropdown" aria-expanded="false" >
+                    <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 2px" width="35" height="35" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                       <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                       <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                     </svg>
@@ -71,29 +81,39 @@
 </div>
   <main id="main">
     <div id="">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 3"></button>
+
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active carru">
-          <img src="img/cover_back.png" class="d-block w-100 crop " alt="...">
+        <div class="carousel-item active ">
+          <img src="img/cover_back.png" class="img-fluid d-block w-100  " alt="...">
  
         </div>
-        <div class="carousel-item carru">
-          <img src="img/toys_index.jpg" class="d-block w-100 imgc crop" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>JUGUETES</h1>
-            <h2>Encuentra aquí los mejores precios para niños/as de cualquier edad.</h2>
+        <div class="carousel-item ">
+          <img src="img/publicidad1.jpg" class="img-fluid d-block w-100 imgc " alt="...">
+          <div style=" text-align: left;" class="carousel-caption d-none d-md-block">
+            <h1 style="font-size: 52px">Nuevo</h1>
+            <h2>Peugeot 208</h2>
+            <button class="btn btn-warning" style="margin-left: 30px;" id="Peugeot208"><strong>Ver producto</strong></button>
           </div>
         </div>
-        <div class="carousel-item carru">
-          <img src="img/furniture_index.jpg" class="d-block w-100 imgc crop" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>Muebles</h1>
-            <h3>Muebles antiguos, nuevos y para ser armados por uno mismo.</h3>
+        <div class="carousel-item">
+          <img src="img/publicidad2.jpg" class="img-fluid d-block w-100 imgc" alt="...">
+          <div style=" text-align: right" class="carousel-caption d-none d-md-block">
+            <h1>La mejor</h1>
+            <h1 style="font-size: 70px; margin-top: -30px;"><strong>BMX</strong></h1>
+            <button id="BMX" style="background-color:black; color: white;" class="btn success"><h6> <strong> VER PRODUCTO </strong> </h6></button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/publicidad3.jpg" class="img-fluid d-block w-100 imgc" alt="...">
+          <div style=" text-align: left" class="carousel-caption d-none d-md-block">
+            <button id="PS5" style="background-color:black; color: white;" class="btn success"><h6> Mas info</h6></button>
           </div>
         </div>
       </div>
@@ -111,7 +131,7 @@
     <div class="album py-5 bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="zoom col-md-4">
             <div class="card mb-4 shadow-sm custom-card cursor-active" id="autos">
               <img class="bd-placeholder-img card-img-top" src="img/cars_index.jpg"
                 alt="Imgagen representativa de la categoría 'Autos'">
@@ -121,7 +141,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="zoom col-md-4">
             <div class="card mb-4 shadow-sm custom-card cursor-active" id="juguetes">
               <img class="bd-placeholder-img card-img-top" src="img/toys_index.jpg"
                 alt="Imgagen representativa de la categoría 'Juguetes'">
@@ -131,7 +151,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="zoom col-md-4">
             <div class="card mb-4 shadow-sm custom-card cursor-active" id="muebles">
               <img class="bd-placeholder-img card-img-top" src="img/furniture_index.jpg"
                 alt="Imgagen representativa de la categoría 'Muebles'">
