--- a/my-profile.html
+++ b/my-profile.html
@@ -51,9 +51,7 @@
             <a class="zoom nav-link" href="sell.html">Vender</a>
           </li>
 
-          <li  style="width:auto;"></li>
-
-          <li class="nav-item">
+          <li class="nav-item itemBuscar">
             <div class="col row" role="search">
               <div class="col-md-10 form-outline">
                 <input class="zoom form-control me-2 col" id="searches" onkeyup="busca()" placeholder="Buscar" aria-label="Search">
@@ -62,16 +60,13 @@
                 <button class="zoom btn col row" id="search" style="align-items: center;" type="submit"> <i class="fas fa-search"></i></button>
             </div>
           </li>
-
-          <li  style="width:50px;"></li>
-          <div class="btn-group row">
             
-            <div class="row" data-bs-toggle="dropdown" style="margin-top: 2%;">
+            <div class="row" data-bs-toggle="dropdown" style="margin-top: 0,5%;">
               <div class="col-1 zoom" id="picture"></div>
               <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
             </div>
 
-            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" style="opacity: 0.7; width: 500px; background-color: black; color: white;">
+            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
               <div id="usuarioLg">
                 <li class="usuario"style="margin-left: 1em;" id="usuario"></li> 
               </div>
