--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
             <a class="zoom nav-link" href="sell.html">Vender</a>
           </li>
 
-          <li  style="width:auto;"></li>
 
-          <li class="nav-item">
+          <li class="nav-item itemBuscar">
             <div class="col row" role="search">
               <div class="col-md-10 form-outline">
                 <input class="searchEffectInit zoom form-control me-2 col" id="searches" onkeyup="busquedaIndex()" placeholder="Buscar" aria-label="Search">
@@ -54,17 +53,14 @@
             </div>
           </li>
 
-          <li  style="width:50px;"></li>
-          <div class="btn-group row">
-            
-            <div class="row" data-bs-toggle="dropdown" style="margin-top: 2%;">
+            <div class="row" data-bs-toggle="dropdown" style="margin-top: 0,5%;">
               <div class="col-1" id="picture"></div>
               <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
             </div>
 
-            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" style="opacity: 0.7; width: auto; background-color: black; color: white;">
+            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
               <div id="usuarioLg">
-                <li class="usuario"style="margin-left: 1em;" id="usuario"></li> 
+                <li class="usuario btn"style="margin-left: 1em;" id="usuario"></li> 
               </div>
 
               <li>
@@ -95,7 +91,6 @@
                 </a>
               </li>                  
             </ul>
-          </div>
         </ul>
       </div>
     </div>
