--- a/my-profile.html
+++ b/my-profile.html
@@ -104,13 +104,20 @@
       </div>
     </div>
   </nav>
-  <main>
+  <main id="main">
     <div class="container">
       <div class="alert alert-danger text-center" role="alert">
         <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
       </div>
     </div>
   </main>
+
+  <div id="busqueda">
+    <div id="spinner-wrapper">
+      <div class="lds-ring"></div>
+    </div>
+  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
@@ -126,6 +133,8 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
+  <script src="js/search.js"></script>
+  
 </body>
 
 </html>
