--- a/product-info.html
+++ b/product-info.html
@@ -50,7 +50,7 @@
 </head>
 
 <body onload="cargarInicio()">
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: absolute">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: inherit">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -128,9 +128,8 @@
     </div>
   </nav>
   <main id="main">
-    <br><br>
     <div class="container">
-      <section class="single-product">
+      <section class="single-product mt-3">
         <div class="container">
           <div class="row mt-20">
             <div class="col-md-8">
@@ -155,7 +154,7 @@
               <div id="dato"></div>
                 <div class="input-group input-number-group">
                   <p> Cantidad: <p>
-                  <input id="cant" class="input-number" type="number" value="1" min="0" max="1000" style="margin-left: 10px;height: 30px; width: 45px;">
+                  <input id="cant" class="input-number" type="number" value="1" min="1" max="1000" style="margin-left: 10px;height: 30px; width: 45px;">
                 </div> <br>
 
                 <div class="text-center">
